--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
-    "@react-email/components": "^0.5.0",
+    "@react-email/components": "0.5.5",
     "@supabase/supabase-js": "^2.52.1",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
